ingresscontrollers/private/acme-blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-blog
  namespace: acme
spec:
  selector:
    matchLabels:
      app: acme-blog
  replicas: 1
  template:
    metadata:
      labels:
        app: acme-blog
    spec:
      containers:
      - name: acme-blog
        image: lmukadam/acmeblog:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"          
---
apiVersion: v1
kind: Service
metadata:
  name: acme-blog
  namespace: acme
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: acme-blog
