ingresscontrollers/private/acme-website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-website
  namespace: acme
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.acme.com
    http:
      paths:
      - path: /
        backend:
          serviceName: acme-website
          servicePort: 80
