ingresscontrollers/private/frontend-website-ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: acme-website
  namespace: frontend
spec:
  type: ExternalName
  externalName: 10.0.12.6
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-website
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: www.acme.com
    http:
      paths:
      - path: /
        backend:
          serviceName: acme-website
          servicePort: 80
