ingresscontrollers/private/public-blog-ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: acme-blog
  namespace: public
spec:
  type: ExternalName
  externalName: blogcontroller-traefik.blog.svc.cluster.local
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-blog
  namespace: public
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: blog.acme.com
    http:
      paths:
      - path: /
        backend:
          serviceName: acme-blog
          servicePort: 80
