ingresscontrollers/private/public-website-ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: acme-website
  namespace: public
spec:
  type: ExternalName
  externalName: webcontroller-nginx-ingress-web.web.svc.cluster.local
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-website
  namespace: public
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: www.acme.com
    http:
      paths:
      - path: /
        backend:
          serviceName: acme-website
          servicePort: 80
